--- a/views/userViews/changePassword.hbs
+++ b/views/userViews/changePassword.hbs
@@ -783,10 +783,6 @@
       $().ready(function () {
         // validate the comment form when it is submitted
         $("#passwordChangeForm").validate();
-        // validate signup form on keyup and submit
-        $(".regForm").validate({
-          errorLabelContainer: $(".regForm")
-        });
       });
     </script>
 
@@ -796,8 +792,8 @@
     <script>
       async function changePassword() {
         try {
-          if ($('.regForm').valid()) {
-            let formData = new FormData(this)
+          if ($("#passwordChangeForm").valid()) {
+            let formData = new FormData(passwordChangeForm)
             const response = await fetch('/account/changePassword', { method: 'PATCH', body: formData })
             let data = await response.json()
             if (data.success) {
