features/coupon/userSide/update1

--- a/views/userViews/checkoutPage.hbs
+++ b/views/userViews/checkoutPage.hbs
@@ -883,6 +883,17 @@
                 <td>Grand Total</td>
                 <td class=" site-color" id="total-price">₹{{grandTotal}}</td>
               </tr>
+              <tr>
+                <td colspan="2">
+                  <div class="input-append couponForm">
+                    <form id="couponApplyForm">
+                      <input class="col-lg-8" name="couponCode" id="appendedInputButton" type="text"
+                        placeholder="Enter coupon code">
+                      <button class="col-lg-4 btn btn-success" type="submit">Apply!</button>
+                    </form>
+                  </div>
+                </td>
+              </tr>
             </tbody>
             <tbody>
             </tbody>
@@ -1011,8 +1022,37 @@
 
   </script>
 
+  {{!-- apply coupon --}}
   <script>
+    async function couponApply() {
+      let couponApplyFormElement = document.getElementById('couponApplyForm')
+      let formData = {
+        couponApplyForm: couponApplyFormElement.couponCode.value
+      }
+      let response = await fetch('/checkout/applyCoupon', {
+        method: 'POST', headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(formData)
+      })
 
+      let result = await response.json()
+      console.log(formData)
+      console.log(result.couponApplied)
+
+      if (result.couponApplied) {
+        return await Swal.fire({
+          icon: "success",
+          title: "Your work has been saved",
+          showConfirmButton: false,
+          timer: 1500
+        });
+      }
+    }
+
+    couponApplyForm.addEventListener('submit', (e) => {
+      e.preventDefault()
+      console.log('clicked')
+      couponApply()
+    })
   </script>
 
 
